--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "Write",
+  "name": "electron-template",
   "version": "0.0.1",
   "private": true,
-  "description": "A lightweight, yet powerful word processor.",
+  "description": "A lightweight, yet powerful Electron.js template.",
   "author": "Paradigm Development, Inc.",
-  "repository": "github:Paradigm-Dev/write-desktop",
+  "repository": "github:Paradigm-Dev/electron-template",
   "scripts": {
-    "build": "vue-cli-service electron:build --publish always --win",
+    "build": "vue-cli-service electron:build",
     "serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps"
@@ -22,10 +22,10 @@
     "vuetify": "^2.0.0-beta.9"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.9.2",
-    "@vue/cli-service": "^3.9.3",
+    "@vue/cli-plugin-babel": "^4.3.1",
+    "@vue/cli-service": "^4.3.1",
     "electron": "^5.0.7",
-    "vue-cli-plugin-electron-builder": "^1.3.6",
-    "vue-template-compiler": "^2.6.10"
+    "vue-cli-plugin-electron-builder": "^1.4.6",
+    "vue-template-compiler": "^2.6.11"
   }
 }
