--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "private": true,
   "description": "A lightweight, yet powerful Electron.js template.",
   "author": "Paradigm Development, Inc.",
-  "repository": "github:Paradigm-Dev/electron-template",
   "scripts": {
-    "build": "vue-cli-service electron:build",
     "serve": "vue-cli-service electron:serve",
+    "build": "vue-cli-service electron:build",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps"
   },
@@ -15,17 +14,19 @@
   "dependencies": {
     "@mdi/font": "^3.8.95",
     "core-js": "^2.6.5",
-    "electron-updater": "^4.1.2",
+    "electron-updater": "^4.3.5",
     "file-saver": "^2.0.2",
-    "print-js": "^1.0.61",
-    "vue": "^2.6.10",
-    "vuetify": "^2.0.0-beta.9"
+    "print-js": "^1.4.0",
+    "vue": "^2.6.12",
+    "vuetify": "^2.3.10"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.3.1",
-    "@vue/cli-service": "^4.3.1",
-    "electron": "^5.0.7",
+    "@vue/cli-plugin-babel": "^4.5.6",
+    "@vue/cli-service": "^4.5.6",
+    "electron": "^5.0.13",
     "vue-cli-plugin-electron-builder": "^1.4.6",
-    "vue-template-compiler": "^2.6.11"
-  }
+    "vue-cli-plugin-tailwind": "~1.5.0",
+    "vue-template-compiler": "^2.6.12"
+  },
+  "repository": "github:Paradigm-Dev/electron-template"
 }
